module/styles/project.css
/* ... */
body.lg div.action-bar div.action-buttons a.button.undo:active
{
    background: -moz-linear-gradient(center top, #742F2F, #D68C8C) repeat
        scroll 0 0 transparent;
    background: -webkit-gradient(linear, left bottom, left top, from(#D68C8C),
        to(#742F2F) ) #DDDDDD;
    text-shadow: 1px 1px #5B1B1B;
}
body.lg div.action-bar div.action-buttons a.button.update,body.lg div.action-bar a.button.finish,body.lg div.action-bar a.button.save,body.lg div.action-bar a.button.link,body.lg div.action-bar a.button.next
{
    background: -moz-linear-gradient(center top, #79B1FE, #294F8C) repeat
        scroll 0 0 transparent;
    background: -webkit-gradient(linear, left bottom, left top, from(#294F8C),
        to(#79B1FE) ) #DDDDDD;
    text-shadow: 1px 1px #1E2E6A;
}
body.lg div.action-bar div.action-buttons a.button.update:active,body.lg div.action-bar a.button.finish:active,body.lg div.action-bar a.button.save:active,body.lg div.action-bar a.button.link:active,body.lg div.action-bar a.button.next:active
{
    background: -moz-linear-gradient(center top, #294F8C, #79B1FE) repeat
        scroll 0 0 transparent;
    background: -webkit-gradient(linear, left bottom, left top, from(#79B1FE),
        to(#294F8C) ) #DDDDDD;
    text-shadow: 1px 1px #153E19;
}
body.lg div.column-header-recon-stats-bar
{
    display: none;
}
body.lg div.data-table-recon-candidates
{
    display: none;
}
body.lg div.data-table-recon-extra
{
    display: none;
}
body.lg div.labelling-panel
{
}
body.lg div.labelling-panel div.column-list
{
    margin-left: 7px;
    margin-right: 7px;
    margin-top: 10px;
    padding: 0;
}
body.lg div.labelling-panel div.column-list ul
{
    list-style-type: none;
    margin: 0;
}
body.lg div.labelling-panel div.column-list ul li
{
    margin-bottom: 15px;
}
body.lg div.labelling-panel div.column-list ul li input.column-label
{
    background-position: 5px 3px;
    background-repeat: no-repeat;
    border-bottom: 1px solid #D6D6D6;
    border-left: 1px solid #8F8F8F;
    border-right: 1px solid #D6D6D6;
    border-top: 1px solid #8F8F8F;
    margin: 0;
    padding: 4px 3px 4px 25px;
    width: 87%;
}
body.lg div.labelling-panel div.column-list ul li input.column-label:hover
{
    color: #0059D5;
}
body.lg div.labelling-panel div.column-list ul li textarea
{
    border-bottom: 1px solid #D6D6D6;
    border-left: 1px solid #8F8F8F;
    border-right: 1px solid #D6D6D6;
    border-top: 1px solid #8F8F8F;
    color: #999999;
    display: none;
    font-style: italic;
    height: 32px;
    margin: 3px 0 0;
    padding: 3px;
    width: 96% !important;
}
body.lg div.labelling-panel div.column-list ul li.bad input,body.lg div.labelling-panel div.row-description.bad input
{
    background-color: #FFEDED;
    background-image: url(../images/error.png);
}
body.lg div.labelling-panel div.column-list ul li.good input,body.lg div.labelling-panel div.row-description.good input
{
    background-color: #FCFEEB;
    background-image: url(../images/good.png);
}
body.lg div.labelling-panel div.column-list ul li.great input,body.lg div.labelling-panel div.row-description.great input
{
    background-color: #EFFFEA;
    background-image: url(../images/great.png);
}
body.lg div.labelling-panel div.column-list ul li.maybe input,body.lg div.labelling-panel div.row-description.maybe input
{
    background-image: url(../images/unknown.png);
}
body.lg div.labelling-panel div.row-description
{
    margin: 5px 7px 15px;
}
body.lg div.labelling-panel div.row-description input
{
    background-position: 5px 3px;
    background-repeat: no-repeat;
    border-bottom: 1px solid #D6D6D6;
    border-left: 1px solid #8F8F8F;
    border-right: 1px solid #D6D6D6;
    border-top: 1px solid #8F8F8F;
    margin: 0;
    padding: 4px 3px 4px 25px;
    width: 87%;
}
body.lg div.labelling-panel div.row-description textarea
{
    border-bottom: 1px solid #D6D6D6;
    border-left: 1px solid #8F8F8F;
    border-right: 1px solid #D6D6D6;
    border-top: 1px solid #8F8F8F;
    color: #999999;
    display: none;
    font-style: italic;
    height: 32px;
    margin: 3px 0 0;
    padding: 3px;
    width: 96% !important;
}
body.lg div.labelling-panel h3
{
    margin-bottom: 0px;
    margin-left: 0;
    padding-bottom: 5px;
}
body.lg div.labelling-panel ul.key
{
    list-style-type: none;
    margin-bottom: 10px;
    margin-left: 18px;
    margin-top: 0;
}
body.lg div.labelling-panel ul.key li
{
    margin-bottom: 5px;
}
body.lg div.labelling-panel,body.lg div#linking-panel
{
}
body.lg div.next-button
{
    background: none repeat scroll 0 0 #BBCCFF;
    border-top: 1px solid #CCCCCC;
    bottom: 0;
    padding: 4px 0;
    position: absolute;
    text-align: center;
    width: 300px;
}
body.lg div.next-button a.button
{
    font-weight: bold;
}
body.lg div.quick-tool
{
    background: none repeat scroll 0 0 #FFFFFF;
    border-color: #B5B5B5 #777777 #777777 #B5B5B5;
    border-style: solid;
    border-width: 1px;
    display:none;
    font-size: 1.1em;
    font-weight: normal;
    margin-left: 0;
    margin-top: 1px;
    padding: 1px;
    position: absolute;
    width: 80px !important;
    z-index: 1;
}
body.lg div.quick-tool ul
{
    list-style-type: none;
}
body.lg div.quick-tool ul li
{
    cursor: pointer;
    display: inline-block;
    float: left;
    margin: 1px;
    padding: 5px;
    width: 68px;
}
body.lg div.quick-tool ul li:hover
{
    background: none repeat scroll 0 0 #DBE8F8;
}
body.lg div.rangeSelect div.range
{
    background-color: #FFFFFF;
    border: 1px solid #DDDDDD;
    margin-top: 5px;
    padding: 5px;
    text-align: left;
}
body.lg div.rangeSelect div.range select
{
    font-family: inherit;
    margin-bottom: 5px;
    width: 99%;
}
body.lg div.rangeSelect div.range span
{
    display: block;
    font-size: 12px;
    padding-bottom: 3px;
    padding-left: 1px;
    width: 35px;
}
body.lg div.selector a.clearButton
{
    display: none;
    margin-left: 2px;
}
/* ... */

